--- a/my_custom.cnf
+++ b/my_custom.cnf
@@ -6,6 +6,4 @@ log_output = FILE
 log-bin=/var/log/mysql/binlog
 binlog-format=STATEMENT        # Use STATEMENT format for detailed changes
 server-id=1              # Required for binary logging
-expire-logs-days=0       # do not delete logs
-# Disable binary log flushing on restart
-sync_binlog = 0
+expire-logs-days=7       # Automatically delete logs older than 7 days
